# galactica

./: Makefile.am  autogen.sh  configure  configure.ac  wscript
data/: Makefile.am  galactica.lua
examples/: Makefile.am  simple_audiotestsrc_player.vala  simple_file_player.vala  wscript_build
lib/: Makefile.am  collective-item-list.vala  collective-item.vala  collective-parser.vala  collective-session-playlist.vala  collective-session.vala  config.vapi  galactica-console.vala  galactica-lua.vala  galactica-playlist.vala  galactica-track-custompipeline.vala  lua5.1.vapi  wscript_build
lib/config/: config.vapi
lib/console/: console_key.c  console_width.c  output.vala  wscript_build
lib/lua/: Lua.vala  wscript_build
lib/object/: Object.vala  wscript_build
lib/playlist/: Playlist.vala  wscript_build
lib/playlist/tests/: test-playlist.vala  wscript_build
lib/playlistbuilder/: PlaylistBuilder.vala  wscript_build
lib/track/: Playbin.vala  Playbin1.vala  Playbin2.vala  Track.vala  wscript_build
lib/track/tests/: test-custom.vala  test-playbin.vala  wscript_build
scripts/: Makefile.am  galactica-8bit
share/: wscript_build
src/: Makefile.am  console.vala  console_key.c  console_width.c  galactica.vala  output.vala  wscript_build
tests/: Makefile.am  test-galactica-custom.vala  test-galactica-playbin.vala  test-galactica-playlist.vala
